Fix(UI): Increase size of sidebar in all devices
Increase slightly its width to avoid a scrollbar

--- a/src/global/index.css
+++ b/src/global/index.css
@@ -84,7 +84,7 @@ body {
   .calendar-layout {
     grid-template-columns: 300px 1fr;
     row-gap: 0;
-    column-gap: 1rem;
+    column-gap: 0.5rem;
     grid-template-areas:
       "header header"
       "sidebar main"
@@ -95,9 +95,9 @@ body {
 /* Desktop */
 @media (min-width: 1024px) {
   .calendar-layout {
-    grid-template-columns: 350px 1fr;
+    grid-template-columns: 360px 1fr;
     grid-template-rows: 5rem 1fr 2.5rem;
-    column-gap: 2rem;
+    column-gap: 1rem;
     grid-template-areas:
       "header header"
       "sidebar main"
